--- a/giao-dien/css/style.css
+++ b/giao-dien/css/style.css
@@ -503,4 +503,140 @@ body {
   transition: left 0.2s ease;
 }
 
-/* ------------------------------ */
+/* Category------------------------------ */
+.row {
+  display: flex;
+  flex-wrap: wrap;
+}
+.category {
+  padding: 100px 0 0;
+}
+.category-top {
+  margin-bottom: 50px;
+}
+.category-top p{
+  font-family: var(--main-text-font);
+  margin: 0 12px;
+  font-size: 12px;
+}
+.category-left {
+  width: 20%;
+  
+
+}
+.category-right {
+  width: 80%;
+}
+.category-right-top-item:first-child {
+  flex: 2;
+  font-size: 16px;
+  font-family: var(--main-text-font);
+  font-weight: bold;
+}
+.category-right-top-item{
+  flex: 1;
+  padding: 0 12px;
+}
+.category-right-top-item button {
+  width: 100%;
+  padding: 10px 15px;
+  display: flex;
+  justify-content: space-between;
+  background-color: #ffff;
+  border: 1px solid #dddddd;
+  cursor: pointer;
+}
+.category-right-top-item select {
+  width: 100%;
+  padding: 10px 15px;
+  display: flex;
+  justify-content: space-between;
+  background-color: #ffff;
+  border: 1px solid #dddddd;
+  cursor: pointer;
+}
+.category-right-content {
+  padding-top: 20px;
+  justify-content: space-between;
+}
+.category-right-content-item {
+  width: calc(25% - 12px);
+  text-align: center;
+  padding: 12px 0;
+}
+.category-right-content-item img {
+  width: 100%;
+}
+.category-right-content-item h1{
+  font-size: 12px;
+  font-family: var(--main-text-font);
+  text-align: center;
+  margin-top: 6px;
+  color: #333333;
+}
+.category-right-content-item p {
+  font-size: 12px;
+}
+.category-right-bottom {
+  justify-content: space-between;
+  margin: 30px 0 20px;
+  width: 100%;
+}
+.category-right-bottom p {
+  font-family: var(--main-text-font);
+  font-size: 11px;
+}
+.category-left ul li {
+  padding: 12px 0;
+}
+.category-left ul li>a {
+  color: black;
+  font-size: 16px;
+  font-weight: bold;
+  font-family: var(--main-text-font);
+}
+.category-left ul li ul li {
+  padding-left: 15px;
+}
+.category-left-li ul {
+  display: none;
+}
+.category-left-li.block ul {
+  display: block;
+}
+.category-left ul li ul li a {
+  color: #333333;
+  font-size: 12px;
+}
+/* Product---------------------------------- */
+.product {
+  padding: 100px 0;
+}
+.product-top {
+  margin-bottom: 30px;
+}
+.product-top p {
+  font-family: var(--main-text-font);
+  margin: 0 12px;
+  font-size: 12px;
+}
+.product-content-left {
+  width: 50%;
+}
+.product-content-right {
+  width: 50%;
+  padding-left: 20px;
+}
+.product-content-left-big-img {
+  width: 80%;
+  padding-right: 20px;
+}
+.product-content-left-big-img img {
+  width: 100%;
+}
+.product-content-left-small-img {
+  width: 20%;
+}
+.product-content-left-small-img img {
+  width: 100%;
+}
