--- a/giao-dien/css/style.css
+++ b/giao-dien/css/style.css
@@ -114,7 +114,7 @@ header.sticky {
   right: 10px;
 }
 
-/* Submenu---------------------------------- */
+/* SUBMENU---------------------------------- */
 .sub-menu {
   position: absolute;
   width: 150px;
@@ -156,7 +156,7 @@ header.sticky {
   display: flex;
 }
 
-/* Footer-------------------------------- */
+/* FOOTER-------------------------------- */
 footer {
   text-align: center;
 }
@@ -204,7 +204,7 @@ footer {
   margin-bottom: 20px;
 }
 
-/* App----------------------------------- */
+/* APPS----------------------------------- */
 .app-container {
   text-align: center;
   align-items: center;
@@ -237,9 +237,7 @@ footer {
   outline: none;
 }
 
-/* --------------------------------------
-  Slide chuyển ảnh
- */
+/*SLIDES ----------------------------------*/
 body {
   font: 14px/2 "Open sans", sans-serif;
   letter-spacing: 0.05em;
@@ -503,7 +501,7 @@ body {
   transition: left 0.2s ease;
 }
 
-/* Category------------------------------ */
+/* CATEGORY------------------------------ */
 .row {
   display: flex;
   flex-wrap: wrap;
@@ -608,7 +606,7 @@ body {
   color: #333333;
   font-size: 12px;
 }
-/* Product---------------------------------- */
+/*PRODUCT -------------------------------- */
 .product {
   padding: 100px 0;
 }
@@ -621,10 +619,10 @@ body {
   font-size: 12px;
 }
 .product-content-left {
-  width: 50%;
+  width: 55%;
 }
 .product-content-right {
-  width: 50%;
+  width: 45%;
   padding-left: 20px;
 }
 .product-content-left-big-img {
@@ -633,10 +631,148 @@ body {
 }
 .product-content-left-big-img img {
   width: 100%;
+  cursor: pointer;
 }
 .product-content-left-small-img {
   width: 20%;
 }
 .product-content-left-small-img img {
   width: 100%;
+  cursor: pointer;
+}
+.product-content-right-product-name h1 {
+  font-family: var(--main-text-font);
+  font-size: 16px;
+}
+.product-content-right-product-name p {
+  color: #CCCCCC;
+  font-size: 12px;
+}
+.product-content-right-product-price {
+  margin: 12px 0;
+  font-size: 20px;
+  font-weight: bold;
+  font-family: var(--main-text-font);
+}
+.product-content-right-product-color img {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+}
+.product-content-right-product-color img {
+  height: 30px;
+  width: 30px;
+  border: 1px solid #333;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 12px 0;
+}
+.product-content-right-product-size span {
+  display: inline-block;
+  padding: 3px 6px;
+  border: 1px solid #dddddd;
+  margin: 12px 10px 12px 0;
+  font-size: 12px;
+  cursor: pointer;
+}
+.quanlity {
+  display: flex;
+  margin-bottom: 20px;
+}
+.quanlity input {
+  width: 35px;
+  padding-left: 3px;
+}
+.product-content-right-product-button button {
+  width: 150px;
+  height: 40px;
+  display: block;
+  margin: 20px 0 12px;
+  transition: 0.5s ease;
+}
+.product-content-right-product-button button:first-child {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: #ffff;
+  border: 2px solid black;
+  cursor: pointer;
+}
+.product-content-right-product-button button:first-child:hover {
+  background-color: black;
+  color: #ffff;
+}
+.product-content-right-product-button button:last-child {
+  border: 2px solid black;
+  color: black;
+  background-color: #ffff;
+  cursor: pointer;
+}
+.product-content-right-product-icon {
+  display: flex;
+}
+.product-content-right-product-icon-item {
+  display: flex;
+  margin-right: 12px;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+.product-content-right-product-icon-item i {
+  font-size: 12px;
+  margin-right: 6px;
+}
+.product-content-right-product-QR {
+  margin: 20px 0; 
+}
+.product-content-right-product-QR img {
+  width: 100px;
+  height: 100px;
+}
+.product-content-right-product-bottom {
+  padding-top: 40px;
+  border-top: 1px solid #dddddd;
+  position: relative;
+}
+.product-content-right-bottom-top {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  border: 1px solid #dddddd;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #fff;
+  top: -15px;
+  left: 50%;
+  border-radius: 50%;
+  transform: translateX(-50%);
+  cursor: pointer;
+}
+.product-content-right-bottom-content-title {
+  border-bottom: 2px solid #dddddd;
+}
+.product-content-right-bottom-content-title-item {
+  padding: 6px;
+  cursor: pointer;
+  margin-right: 6px;
+}
+.product-content-right-bottom-content-title-item p {
+  font-family: var(--main-text-font);
+  font-size: 14px;
+}
+.product-content-right-bottom-content {
+  padding-top: 30px;
+  font-family: var(--main-text-font);
+  font-size: 12px;
+}
+.product-content-right-bottom-content-baoquan {
+  display: none;
+}
+.product-content-right-bottom-content-kichthuoc {
+  display: none;
+}
+.activeB {
+  display: none;
 }
